# Tetris

./: CHANGELOG.md  README.md  tetris2.cabal
app/: Config.hs  Main.hs  Piece.hs
app/stuff/: template.hs  test.hs
